<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.teletha</groupId>
	<artifactId>sinobu</artifactId>
	<version>2.0.0</version>
	<packaging>jar</packaging>
	<name>sinobu</name>
	<description>Sinobu is not obsolete framework but utility, which can manipulate objects as a extremely-condensed facade.</description>
	<dependencies>
		<dependency>
			<groupId>com.pgs-soft</groupId>
			<artifactId>HttpClientMock</artifactId>
			<version>LATEST</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>antibug</artifactId>
			<version>LATEST</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>LATEST</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>LATEST</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>LATEST</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>io.reactivex.rxjava2</groupId>
			<artifactId>rxjava</artifactId>
			<version>LATEST</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
	</dependencies>
	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<repositories>
		<repository>
			<id>Maven</id>
			<name>repo1.maven.org</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>JCenter</id>
			<name>jcenter.bintray.com</name>
			<url>https://jcenter.bintray.com/</url>
		</repository>
	</repositories>
	<url>https://github.com/teletha/sinobu</url>
	<scm>
		<url>https://github.com/teletha/sinobu</url>
		<connection>scm:git:https://github.com/teletha/sinobu.git</connection>
		<developerConnection>scm:git:https://github.com/teletha/sinobu.git</developerConnection>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/teletha/sinobu/issues</url>
	</issueManagement>
	<developers>
		<developer>
			<name>Teletha</name>
			<email/>
			<url>https://github.com/Teletha</url>
		</developer>
	</developers>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>14</source>
					<target>14</target>
					<encoding>UTF-8</encoding>
					<compilerArgs>
						<arg>-proc:none</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>